@@ -97,6 +97,7 @@
 #define DCC_OFFER	0x00040000
 #define DCC_DELETE	0x00080000
 #define DCC_TWOCLIENTS	0x00100000
+#define DCC_RESUME_REQ	0x00200000
 #define DCC_QUEUE	0x00400000
 #define DCC_TDCC	0x00800000
 #define DCC_BOTCHAT	0x01000000
